# python-pco

./: LICENSE  README.md  pyproject.toml
src/pco/: __init__.py  auth.py  client.py  exceptions.py  models.py
src/pco/modules/: __init__.py  base.py  checkins.py  giving.py  people.py  resources.py  services.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py
tests/test_modules/: __init__.py  test_people.py  test_services.py
